# microkanren

./: .gitignore  LICENSE  README.md  microkanren.cabal
src/Language/: MicroKanren.hs
tests/: doctest.hs
