name:                microkanren
version:             0.1.0.0
synopsis:            MicroKanren
description:         An implementation of the microKanren language described in <http://webyrd.net/scheme-2013/papers/HemannMuKanren2013.pdf "μKanren: A Minimal Functional Core for Relational Programming">
                     by Jason Hemann and Daniel Friedman.

homepage:            https://github.com/peddie/microkanren
license:             PublicDomain
license-file:        LICENSE
author:              Matthew Peddie
maintainer:          mpeddie@gmail.com
copyright:           (c) 2016 Matthew Peddie <mpeddie@gmail.com>
category:            Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:           git
  location:       https://github.com/peddie/microkanren

library
  exposed-modules:     Language.MicroKanren
  build-depends:       base >=4.8 && <4.9
                     , logict >=0.6 && <0.7
                     , transformers >=0.4 && <0.5
                     , containers >=0.5 && <0.6
                     , uniplate >=1.6 && <1.7
  hs-source-dirs:      src
  default-language:    Haskell2010
